fixtures/positive/schema_target_valid.inc
---
title = Schema target
version = 1
[columns]
score = points
---
name,score
Ada,21
