fixtures/negative/invalid_section_key.inc
---
title = Invalid section key
[columns]
bad key = points
---
name,score
Ada,21
